@@ -1,3 +1,6 @@
+2011-03-07 Sasa Bojanic <sasaboy@together.at>
+   # Not packaging Java API documentation into distribution zip/tar.gz/exe/rpm files
+
 2011-03-04 Sasa Bojanic <sasaboy@together.at>
    # Docbook upgraded to version 1.76.1
 
